Fix Profil index conditions
